@@ -1,3 +1,6 @@
+* #4503: Do some standard Tubes boilerplate in sugar.presence, so activities
+  don't have to (smcv)
+
 Snapshot fdb4e49b14
 
 * Save journal files on nand, not tmpfs (tomeu)
